chore: upgrade to Java 21 (#580)
Closes: MODKBEKBJ-778