@@ -13,7 +13,6 @@ import java.util.Objects;
 import java.util.UUID;
 import java.util.concurrent.CompletableFuture;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 import javax.ws.rs.NotFoundException;
 import lombok.extern.log4j.Log4j2;
 import org.folio.common.OkapiParams;
@@ -26,7 +25,6 @@ import org.folio.rest.jaxrs.model.AssignedUserId;
 import org.folio.service.users.Group;
 import org.folio.service.users.User;
 import org.folio.service.users.UsersLookUpService;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.core.convert.converter.Converter;
 import org.springframework.stereotype.Component;
 
@@ -34,21 +32,25 @@ import org.springframework.stereotype.Component;
 @Component
 public class AssignedUsersServiceImpl implements AssignedUsersService {
 
-  @Autowired
-  private AssignedUserRepository assignedUserRepository;
+  private final AssignedUserRepository assignedUserRepository;
 
-  @Autowired
-  private Converter<Collection<DbAssignedUser>, AssignedUserCollection> collectionConverter;
-  @Autowired
-  private Converter<UserCollectionDataConverter.UsersResult, AssignedUserCollection> userCollectionConverter;
-  @Autowired
-  private Converter<AssignedUserId, DbAssignedUser> toDbConverter;
-  @Autowired
-  private Converter<DbAssignedUser, AssignedUserId> toAssignedUserIdConverter;
-  @Autowired
-  private UsersLookUpService usersLookUpService;
-  @Autowired
-  private Converter<AssignedUserId, User> userConverter;
+  private final Converter<UserCollectionDataConverter.UsersResult, AssignedUserCollection> userCollectionConverter;
+  private final Converter<AssignedUserId, DbAssignedUser> toDbConverter;
+  private final Converter<DbAssignedUser, AssignedUserId> toAssignedUserIdConverter;
+  private final UsersLookUpService usersLookUpService;
+
+  public AssignedUsersServiceImpl(
+    AssignedUserRepository assignedUserRepository,
+    Converter<UserCollectionDataConverter.UsersResult, AssignedUserCollection> userCollectionConverter,
+    Converter<AssignedUserId, DbAssignedUser> toDbConverter,
+    Converter<DbAssignedUser, AssignedUserId> toAssignedUserIdConverter,
+    UsersLookUpService usersLookUpService) {
+    this.assignedUserRepository = assignedUserRepository;
+    this.userCollectionConverter = userCollectionConverter;
+    this.toDbConverter = toDbConverter;
+    this.toAssignedUserIdConverter = toAssignedUserIdConverter;
+    this.usersLookUpService = usersLookUpService;
+  }
 
   @Override
   public CompletableFuture<AssignedUserCollection> findByCredentialsId(String credentialsId,
@@ -59,12 +61,12 @@ public class AssignedUsersServiceImpl implements AssignedUsersService {
     return assignedUserRepository.findByCredentialsId(toUUID(credentialsId), tenant)
       .thenApply(dbAssignedUsers -> dbAssignedUsers.stream()
         .map(DbAssignedUser::getId)
-        .collect(Collectors.toList()))
+        .toList())
       .thenCompose(idBatches -> loadInBatches(idBatches,
         idBatch -> usersLookUpService.lookUpUsers(idBatch, new OkapiParams(okapiHeaders))))
       .thenCompose(users -> CompletableFuture.completedFuture(sortByLastName(users))
         .thenCombine(fetchGroups(users, okapiHeaders), UserCollectionDataConverter.UsersResult::new)
-        .thenApply(usersResult -> userCollectionConverter.convert(usersResult)));
+        .thenApply(userCollectionConverter::convert));
   }
 
   @Override
@@ -82,7 +84,7 @@ public class AssignedUsersServiceImpl implements AssignedUsersService {
       ).thenCompose(u -> {
         log.info("save:: Attempts to save assignedUser by [tenant: {}]", tenantId);
         return assignedUserRepository.save(toDbConverter.convert(assignedUserId), tenantId)
-          .thenApply(source -> toAssignedUserIdConverter.convert(source));
+          .thenApply(toAssignedUserIdConverter::convert);
       });
   }
 
@@ -118,7 +120,7 @@ public class AssignedUsersServiceImpl implements AssignedUsersService {
       .filter(Objects::nonNull)
       .map(UUID::fromString)
       .distinct()
-      .collect(Collectors.toList());
+      .toList();
     return loadInBatches(groupIds,
       idBatch -> usersLookUpService.lookUpGroups(idBatch, new OkapiParams(okapiHeaders)));
   }
